examples/risky-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storefront
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: storefront
  template:
    metadata:
      labels:
        app: storefront
    spec:
      hostNetwork: true
      volumes:
        - name: host-root
          hostPath:
            path: /
      containers:
        - name: web
          image: nginx:latest
          securityContext:
            privileged: true
            capabilities:
              add: ["SYS_ADMIN"]
          volumeMounts:
            - name: host-root
              mountPath: /host
